{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 7,
  "lineage": "2f501950-d8bc-f2bf-1c4f-631b070a152d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "healthcare_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398132380:internet-gateway/igw-0d98a8ccadd013f51",
            "id": "igw-0d98a8ccadd013f51",
            "owner_id": "767398132380",
            "tags": {
              "Name": "healthcare-igw"
            },
            "tags_all": {
              "Name": "healthcare-igw"
            },
            "vpc_id": "vpc-04d4660c64ddaf95d"
          },
          "dependencies": [
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398132380:route-table/rtb-0df1e8eb4abca86b1",
            "id": "rtb-0df1e8eb4abca86b1",
            "owner_id": "767398132380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d98a8ccadd013f51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "healthcare-public-rt"
            },
            "tags_all": {
              "Name": "healthcare-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d4660c64ddaf95d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.healthcare_igw",
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a9748d5a0c9f9a",
            "route_table_id": "rtb-0df1e8eb4abca86b1",
            "subnet_id": "subnet-00480cd9b25922d96"
          },
          "dependencies": [
            "aws_internet_gateway.healthcare_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "healthcare_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-021bea28e826e3b29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "healthcare-all-traffic",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "healthcare-open-sg"
            },
            "tags_all": {
              "Name": "healthcare-open-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d4660c64ddaf95d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398132380:subnet/subnet-00480cd9b25922d96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00480cd9b25922d96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398132380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "healthcare-public-subnet"
            },
            "tags_all": {
              "Name": "healthcare-public-subnet"
            },
            "vpc_id": "vpc-04d4660c64ddaf95d"
          },
          "dependencies": [
            "aws_vpc.healthcare_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "healthcare_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398132380:vpc/vpc-04d4660c64ddaf95d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c6df930eaa93bef",
            "default_route_table_id": "rtb-07b28508aa6667814",
            "default_security_group_id": "sg-0fa4ab90abf810b93",
            "dhcp_options_id": "dopt-0729778517f3196ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d4660c64ddaf95d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b28508aa6667814",
            "owner_id": "767398132380",
            "tags": {
              "Name": "healthcare-vpc"
            },
            "tags_all": {
              "Name": "healthcare-vpc"
            }
          }
        }
      ]
    }
  ]
}